--- a/index.html
+++ b/index.html
@@ -57,56 +57,95 @@
         <section class="online-games">
             <h2>Online Games <samp>Funny Videos</samp></h2>
             <p>A Collection of Hilarious Videos to Brighten Your Day</p>
-            <!-- <div class="games-cont">
-                <div class="games">
-                    <img class="game-img" src="images/Rectangle 4.png" alt="">
-                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
-                </div>
-                <div class="games">
-                    <img class="game-img" src="images/Rectangle 5.png" alt="">
-                    <p>Did you score? #unblockedgames #school</p>
-                </div>
-                <div class="games">
-                    <img class="game-img" src="images/Rectangle 7.png" alt="">
-                    <p>Breaking game records like OG #unblockedgames #school</p>
-                </div>
-                <div class="games">
-                    <img class="game-img" src="images/Rectangle 6.png" alt="">
-                    <p>Busted gaming on school laptop, but you are still lit.</p>
-                </div>
-
-            </div> -->
             <div class="games-cont">
                 <div class="games game-1">
                     <div>
                         <img src="icons/play-button 1.png" alt="" class="game-img">
                         <p>Play Now</p>
                     </div>
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div class="games game-2">
                     <div>
                         <img src="icons/play-button 1.png" alt="" class="game-img">
                         <p>Play Now</p>
                     </div>
+                    <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="games game-3">
                     <div>
                         <img src="icons/play-button 1.png" alt="" class="game-img">
                         <p>Play Now</p>
                     </div>
+                    <p>Breaking game records like OG #unblockedgames #school</p>
                 </div>
                 <div class="games game-4">
                     <div>
                         <img src="icons/play-button 1.png" alt="" class="game-img">
                         <p>Play Now</p>
                     </div>
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
-            <div class="game-dis">
-                <p>No Download. No Installs. Play games Instantly on Gamer.</p>
-                <p>Did you score? #unblockedgames #school</p>
-                <p>Breaking game records like OG #unblockedgames #school</p>
-                <p>Busted gaming on school laptop, but you are still lit.</p>
+
+        </section>
+        <section class="play">
+            <div class="play-dis">
+                <h2>
+                    <samp>Play Instantly,
+                    </samp>No Downloads
+                    No Installs.
+                </h2>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your
+                    browser.</p>
+            </div>
+            <div class="play-img">
+                <div class="play-img1">
+                    <img src="images/Rectangle 55.png" alt="">
+                </div>
+                <div class="play-img2">
+                    <img src="images/Rectangle 66.png" alt="">
+                </div>
+            </div>
+            </div>
+
+        </section>
+        <section class="card-sec">
+            <div class="card">
+                <img src="images/Rectangle 11.png" alt="">
+                <h4>Action Games</h4>
+            </div>
+            <div class="card">
+                <img src="images/Rectangle 12.png" alt="">
+                <h4>Action Games</h4>
+            </div>
+            <div class="card">
+                <img src="images/Rectangle 13.png" alt="">
+                <h4>Arcade Games</h4>
+            </div>
+            <div class="card">
+                <img src="images/Rectangle 14.png" alt="">
+                <h4>Educational Games</h4>
+            </div>
+            <div class="card">
+                <img src="images/Rectangle 15.png" alt="">
+                <h4>Word Games</h4>
+            </div>
+            <div class="card">
+                <img src="images/Rectangle 16.png" alt="">
+                <h4>Role Palying Games</h4>
+            </div>
+            <div class="card">
+                <img src="images/Rectangle 17.png" alt="">
+                <h4>Music & Audio Games</h4>
+            </div>
+            <div class="card">
+                <img src="images/Rectangle 18.png" alt="">
+                <h4>Puzzle Games</h4>
+            </div>
+            <div class="card">
+                <img src="images/Rectangle 19.png" alt="">
+                <h4>Strategy Games</h4>
             </div>
         </section>
     </main>
