--- a/index.html
+++ b/index.html
@@ -151,7 +151,37 @@
     </main>
 
     <footer>
-
+        <div class="logo-footer">
+            <img src="images/Frame.png" alt="">
+            <h1><span>G</span>amer</h1>
+        </div>
+        <div>
+            <ul class="footer-list">
+                <li>Our Story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li>Careers</li>
+                <li>Support</li>
+                <li>My Account</li>
+            </ul>
+        </div>
+        <div class="footer-img">
+            <img src="icons/twitter.png" alt="">
+            <img src="icons/facebook.png" alt="">
+            <img src="icons/youtube1.png" alt="">
+            <img src="icons/linkedin.png" alt="">
+            <img src="icons/insta.png" alt="">
+            <img src="icons/apple.png" alt="">
+        </div>
+        <div>
+            <ul class="footer-list2">
+                <li>Terms and Conditions</li>
+                <li>Privacy Policy</li>
+                <li>Cookie Policy</li>
+                <li>Privacy Settings</li>
+            </ul>
+        </div>
+        <p class="footer-list2">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
     </footer>
 </body>
 
