--- a/index.html
+++ b/index.html
@@ -147,9 +147,7 @@
                 <img src="images/Rectangle 19.png" alt="">
                 <h4>Strategy Games</h4>
             </div>
-        </section>
-    </main>
-
+        </section class="white-space">
     <footer>
         <div class="logo-footer">
             <img src="images/Frame.png" alt="">
